--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-image: url('CURRICULO DE HEIDSON/fundo.jpg'); /* papel de parede */
+      background-image: url('CURRICULO_DE_HEIDSON/fundo.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
