--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 </head>
 <body>
   <!-- Áudio -->
-  <audio id="musica-fundo" src="CURRICULO_DE_HEIDSON/Twenty One Pilots - Backslide.mp3" type="audio/mpeg"></audio>
+  <audio id="musica-fundo" src=("CURRICULO_DE_HEIDSON/Twenty One Pilots - Backslide.mp3") type="audio/mpeg"></audio>
 
   <div class="max-w-3xl mx-auto p-6 bg-white/90 shadow-2xl rounded-2xl mt-10 backdrop-blur-sm">
     <header class="text-center mb-8">
-      <img src="CURRICULO_DE_HEIDSON/eu.jpg" alt="Foto 3x4 do Aluno" class="perfil-img mx-auto mb-4" />
+      <img src=("CURRICULO_DE_HEIDSON/eu.jpg") alt="Foto 3x4 do Aluno" class="perfil-img mx-auto mb-4" />
       <div class="scroll-container">
         <h2 class="text-2xl font-semibold azul-custom scrolling-text">
           HEIDSON EMANUEL SANTOS DA SILVA
