--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body>
   <!-- Áudio -->
-  <audio id="musica-fundo" src='CURRICULO_DE_HEIDSON/Twenty One Pilots - Backslide.mp3'></audio>
+  <audio id="musica-fundo" src='CURRICULO_DE_HEIDSON/Twenty_One_Pilots_Backslide.mp3'></audio>
 
   <div class="max-w-3xl mx-auto p-6 bg-white/90 shadow-2xl rounded-2xl mt-10 backdrop-blur-sm">
     <header class="text-center mb-8">
