--- a/CURRICULO DE HEIDSON/CURRICULO HEIDSON.HTM
+++ b/CURRICULO DE HEIDSON/CURRICULO HEIDSON.HTM
@@ -72,7 +72,7 @@
 </head>
 <body>
   <!-- Áudio -->
-  <audio id="musica-fundo" src="Twenty One Pilots - Backslide.mp3" type="audio/mpeg"></audio>
+  <audio id="musica-fundo" src="musica.mp3" type="audio/mpeg"></audio>
 
   <div class="max-w-3xl mx-auto p-6 bg-white/90 shadow-2xl rounded-2xl mt-10 backdrop-blur-sm">
     <header class="text-center mb-8">
